test/resources/interpreter/failing/DivisionByZero.scala
object DivisionByZero {
  1/0
}